data/derived/comb/progs/unify/prog2521.ml.out
Characters 74-75:
  let whilesFun f' b' = let fOfB = f' (b') in (b' , b' = fOfB) in whilesFun f;;
                                                                            ^
Error: This expression has type int -> int * bool
       but an expression was expected of type int -> int
       Type int * bool is not compatible with type int 
